Bug 230358 - Selected album does not match containing items
Summary: Selected album does not match containing items
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-MainView (other bugs)
Version First Reported In: 1.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-11 20:52 UTC by Jens Mueller
Modified: 2012-06-27 10:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Mueller 2010-03-11 20:52:48 UTC
Version:           1.2.0 (rev.: 1102045) (using 4.4.1 (KDE 4.4.1), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.31-20-generic

I can it recover only with the following procedure:
1.) select a album in Digikam
2.) take some images and add them to BQM current queue
3.) select a different output folder for BQM
4.) take some other images of the same album and add them to a new BQM queue
5.) select the same output folder as for queue 1
6.) switch between both queues forward and back
7.) swith back to album view and close Digikam - now both Digikam and BQM window close
8.) start Digikam again and you will see your selected album with the contents of your BQM output dir
Comment 1 caulier.gilles 2010-03-16 07:23:16 UTC
Instead to close and restart digikam, press F5to refresh album content. it's work ?

Also, try Tools/Scan for new items option.

Gilles Caulier
Comment 2 Jens Mueller 2010-03-16 18:46:54 UTC
The problem isn't about tools/scan. Also pressing F5 do not change something.

But I can stip the procedure down:
1.) select a album in Digikam
2.) take some images and add them to BQM current queue
3.) select a different output folder for queue
4.) take some other images of the same album and add them to a new BQM queue
5.) select also a output folder different the original images one
6.) if you now switch between both queues via tabs the selected album on the left side stays the correct one, but the thumb view shows the content of the output directory of your selected queue.
Comment 3 Marcel Wiesweg 2010-03-16 18:53:28 UTC
SVN commit 1104096 by mwiesweg:

When a tree view shall change the global current album,
this now must be explicitly enabled with a flag.
In the reported bug, the AlbumSelectWidget in some way fiddled
with the current album (only visible in the current album stored in config for next start)

BUG: 230358

 M  +2 -1      NEWS  
 M  +11 -5     digikam/albumtreeview.cpp  
 M  +9 -2      digikam/albumtreeview.h  
 M  +1 -0      digikam/datefolderview.cpp  
 M  +4 -0      digikam/leftsidebarwidgets.cpp  
 M  +1 -0      utilities/fuzzysearch/fuzzysearchview.cpp  
 M  +2 -1      utilities/gpssearch/gpssearchview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1104096