When a tree view shall change the global current album, this now must be explicitly enabled with a flag. In the reported bug, the AlbumSelectWidget in some way fiddled with the current album (only visible in the current album stored in config for next start)

BUG: 230358

svn path=/trunk/extragear/graphics/digikam/; revision=1104096